--- a/config.h.in
+++ b/config.h.in
@@ -11,6 +11,9 @@
 #define FREERDP_DATA_PATH "${FREERDP_DATA_PATH}"
 #define FREERDP_PLUGIN_PATH "${FREERDP_PLUGIN_PATH}"
 #define FREERDP_KEYMAP_PATH "${FREERDP_KEYMAP_PATH}"
+/* Platform type */
+#define FREERDP_DEFAULT_PLATFORM ${FREERDP_DEFAULT_PLATFORM}
+#define FREERDP_PLATFORM ${FREERDP_PLATFORM}
 
 /* Include files */
 #cmakedefine HAVE_FCNTL_H
